# database-editor

./: .gitignore  README.md  import.html  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
.github/workflows/: build-and-publish.yml  publish.yml  release.yml
src/: App.vue  import-main.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: linux-postrm.sh  linux-prerm.sh  nsis-hooks.nsh
src-tauri/src/: commands.rs  db.rs  error.rs  excel.rs  lib.rs  main.rs  models.rs  settings.rs
src/api/: db.js  settings.js  updater.js
src/components/: AddPanel.vue  EditDialog.vue  ImportDialog.vue  QueryPanel.vue  SettingsDialog.vue  WordTable.vue
src/stores/: query.js  settings.js  stats.js
src/styles/: main.css
src/utils/: error.js  font.js  validation.js
src/views/: ImportView.vue  MainView.vue
