[package]
name = "gebinee-database-editor"
version = "0.0.0"
license = "MIT"
description = "gebinee 单词数据库编辑器"
authors = ["Pueraria lobata <438707985@qq.com>"]
edition = "2021"

[lib]
name = "gebinee_database_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
calamine = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
rust_xlsxwriter = "0.96"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
